--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -53,8 +53,8 @@
                     <a class="button is-primary" href="/transactions/new">
                         <strong><i class="fa-solid fa-plus"></i>&nbsp;&nbsp;New Transaction</strong>
                     </a>
-                    <a class="button is-light">
-                        Log in
+                    <a class="button is-danger">
+                        Log Out
                     </a>
                 </div>
             </div>
