--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,6 +24,10 @@
             <a class="navbar-item" href="/trends">
                 <i class="fa-solid fa-arrow-trend-up"></i>&nbsp;&nbsp;Trends
             </a>
+            <a class="navbar-item" href="/budget">
+                <i class="fa-solid fa-money-bill-trend-up"></i>&nbsp;&nbsp;Budget
+            </a>
+
             <div class="navbar-item has-dropdown is-hoverable">
                 <a class="navbar-link">
                     <i class="fa-solid fa-gear"></i>&nbsp;&nbsp;Settings
