--- a/views/transactions/index.ejs
+++ b/views/transactions/index.ejs
@@ -21,10 +21,11 @@
                     <div class="column">
                         <div class="control has-icons-left">
                             <div class="select">
-                                <select>
-                                    <option>2023</option>
-                                    <option>2022</option>
-                                    <option>2021</option>
+                                <select name="year">
+                                    <option value="2024">2024</option>
+                                    <option value="2023">2023</option>
+                                    <option value="2022">2022</option>
+                                    <option value="2021">2021</option>
                                 </select>
                             </div>
                             <span class="icon is-left">
@@ -35,19 +36,19 @@
                     <div class="column">
                         <div class="control has-icons-left">
                             <div class="select">
-                                <select>
-                                    <option>January</option>
-                                    <option>February</option>
-                                    <option>March</option>
-                                    <option>April</option>
-                                    <option>May</option>
-                                    <option>June</option>
-                                    <option>July</option>
-                                    <option>August</option>
-                                    <option>September</option>
-                                    <option>October</option>
-                                    <option>November</option>
-                                    <option>December</option>
+                                <select name="month">
+                                    <option value="1">January</option>
+                                    <option value="2">February</option>
+                                    <option value="3">March</option>
+                                    <option value="4">April</option>
+                                    <option value="5">May</option>
+                                    <option value="6">June</option>
+                                    <option value="7">July</option>
+                                    <option value="8">August</option>
+                                    <option value="9">September</option>
+                                    <option value="10">October</option>
+                                    <option value="11">November</option>
+                                    <option value="12">December</option>
                                 </select>
                             </div>
                             <span class="icon is-left">
@@ -56,10 +57,10 @@
                         </div>
                     </div>
                     <div class="column">
-                        Third column
+                        &nbsp;
                     </div>
                     <div class="column">
-                        Fourth column
+                        &nbsp;
                     </div>
                 </div>
 
